@@ -52,6 +52,7 @@ CAY-2411 Wrong resolution of ExtendedType with ValueObjectType for inherited cla
 CAY-2418 Modeler: unable to edit entity selected via Search
 CAY-2419 Modeler: Not changing highlight on selecting search results within one entity
 CAY-2420 Modeler: search is not performed for Stored Procedures
+CAY-2425 Modeler: Migrate DB Direction field is locked if no option was selected in dropdown list
 
 ----------------------------------
 Release: 4.1.M1
